# twitch-scrapper

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
specs/001-twitch-streamer-finder/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-twitch-streamer-finder/checklists/: requirements.md
specs/001-twitch-streamer-finder/contracts/: cli-interface.md
src/twitch_scraper/: __init__.py  __main__.py  cli.py  client.py  config.py  exporters.py  extractors.py  models.py  scraper.py
tests/: __init__.py  conftest.py  test_client.py  test_exporters.py  test_extractors.py
